--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - 'src/**'
+      - 'package.json'
+      - 'tsconfig*.json'
 
 env:
   KEYSTORE_HOST: '${{ secrets.KEYSTORE_HOST }}'
